tests/src/frontend/typechecking/invalid/class_type.sk
trait MyTC

fun foo(): void {
  _ = MyTC
}
